Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8684

paralel-scale-nfsv3 ior WARNING: at fs/proc/generic.c:591 proc_register+0xb9/0x170()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.10.0
    • None
    • 3
    • 9223372036854775807

      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: -----------[ cut here ]-----------
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: WARNING: at fs/proc/generic.c:591 proc_register+0xb9/0x170() (Tainted: G W --------------- )
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: Hardware name: X8DTT-H
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: proc_dir_entry 'pools/p' already registered
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: Modules linked in: osc(U) lmv(U) fld(U) mgc(U) lustre(U) lov(U) mdc(U) fid(U) ko2iblnd(U) ptlrpc(U) obdclass(U) lnet(U) sha512_generic sha256_generic crc32c_intel libcfs(U) nfs lockd fscache auth_rpcgss nfs_acl sunrpc ib_ucm rdma_ucm rdma_cm iw_cm ib_addr ib_uverbs ib_umad ib_ipoib ib_cm ipv6 ipmi_devintf iTCO_wdt iTCO_vendor_support serio_raw i2c_i801 i2c_core sg mlx4_ib ib_sa ib_mad ib_core mlx4_en mlx4_core e1000e ptp pps_core lpc_ich mfd_core ioatdma dca i7core_edac edac_core shpchp ext4 jbd2 mbcache sd_mod crc_t10dif pata_acpi ata_generic ata_piix dm_mirror dm_region_hash dm_log dm_mod [last unloaded: scsi_wait_scan]
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: Pid: 5070, comm: llog_process_th Tainted: G W --------------- 2.6.32-431.17.1.el6.x86_64 #1
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: Call Trace:
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: [<ffffffff81071a97>] ? warn_slowpath_common+0x87/0xc0
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: [<ffffffff81071b86>] ? warn_slowpath_fmt+0x46/0x50
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: [<ffffffff811f9c89>] ? proc_register+0xb9/0x170
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: [<ffffffff811f9db5>] ? proc_create_data+0x75/0xd0
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: [<ffffffffa05281c9>] ? lprocfs_add_simple+0x49/0xd0 [obdclass]
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: [<ffffffffa096f4b2>] ? lov_pool_new+0x372/0x7b0 [lov]
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: [<ffffffffa0541d8e>] ? class_process_config+0x133e/0x1ac0 [obdclass]
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: [<ffffffffa03f84d8>] ? libcfs_log_return+0x28/0x40 [libcfs]
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: [<ffffffffa053abfb>] ? lustre_cfg_new+0x40b/0x6f0 [obdclass]
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: [<ffffffffa0543634>] ? class_config_llog_handler+0xa24/0x1680 [obdclass]
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: [<ffffffffa0506d19>] ? llog_process_thread+0xaa9/0xe80 [obdclass]
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: [<ffffffffa0507135>] ? llog_process_thread_daemonize+0x45/0x70 [obdclass]
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: [<ffffffffa05070f0>] ? llog_process_thread_daemonize+0x0/0x70 [obdclass]
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: [<ffffffff8109ab56>] ? kthread+0x96/0xa0
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: [<ffffffff8100c20a>] ? child_rip+0xa/0x20
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: [<ffffffff8109aac0>] ? kthread+0x0/0xa0
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: [<ffffffff8100c200>] ? child_rip+0x0/0x20
      Jun 9 21:53:34 hvtlabmrpcli0037 kernel: --[ end trace f394b27524755ca0 ]--

            wc-triage WC Triage
            jadhav.vikram VIKRAM BABASO JADHAV (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: