LU-8684 mgs: prevent duplicate pool to be added to the log

pool proc entry get created through mgc process running on
client or mdt's, mgs is not aware about pool proc entrys, so
mgs failed to check pool already exist, it simply writes the
pool operation logs into logfile of client or mdt's. lctl
pool_new for existing pool will only write logs and succeed
on mgs, mgc running on client or mdt's process the log to
create pool and cause the warning message proc already
registered for that existing pool.

Changes prevents the duplicate pool to be added to the log
mgs check pool creation logs of client and mdt's logfile
to figure out attempt of duplicate pool creation.

Signed-off-by: Jadhav Vikram <jadhav.vikram@seagate.com>
Change-Id: Ia80d116f552c5f718df99589906404b58f17d85e